<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/bg_ll"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:text="@string/calculate_"
            android:textColor="@color/blue"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:paddingStart="10dp"
            android:id="@+id/health_tv"
            android:text="@string/health"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/weight_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="Enter your weight"
            android:inputType="number" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:weightSum="1">


            <EditText
                android:id="@+id/heightft_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:ems="10"
                android:hint="Ft"
                android:inputType="number" />


            <EditText
                android:id="@+id/inch_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="inch"
                android:inputType="number"
                />


        </LinearLayout>


        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/calculate"
            android:textSize="16sp" />


    </LinearLayout>


</RelativeLayout>