<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherApp"
    android:background="@drawable/gradient">

    <LinearLayout
        android:id="@+id/topConatinerLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/updateatTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/update"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/midContainerLL"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_sky"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:id="@+id/tempTv"
            android:layout_marginTop="10dp"
            android:text="22°C"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/min_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="min. temp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/max_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="max. temp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margintop="5dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:src="@drawable/sunrise_iv"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sunrise"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:00 am"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"/>


            </LinearLayout>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:src="@drawable/sunrise_iv"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sunset"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:00 am"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"/>


            </LinearLayout>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:src="@drawable/sunrise_iv"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sunrise"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:00 am"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"/>


            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:src="@drawable/sunrise_iv"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sunrise"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:00 am"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"/>


            </LinearLayout>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:src="@drawable/sunrise_iv"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sunrise"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:00 am"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/white"/>


            </LinearLayout>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/transparent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:src="@drawable/sunrise_iv"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sunrise"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:00 am"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"/>


            </LinearLayout>



        </LinearLayout>



    </LinearLayout>

<ProgressBar
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/progressbar"
    android:visibility="gone"

    android:layout_centerInParent="true"/>







</RelativeLayout>